--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div>FPS: <span id="fps"></span></div>
       </div>
 
-      <canvas id="gc"></canvas>
+      <canvas id="gc" width="400" height="400"></canvas>
 
       <button class="start-btn">HAMILTONIAN CYCLE ⚪</button>
       <button class="start-btn">Q LEARNING 💪</button>
@@ -31,7 +31,7 @@
     <br>
     <div>
       <input type="range" id="epsilon" min="0" max="100">
-      <label for="volume">Ɛ</label>
+      <label for="epsilon">Ɛ</label>
     </div>
     <div id="range-info"></div>
   </body>
