--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Games</title>
+    <title>S</title>
+    <link rel="icon" type="image/x-icon" href="snake.ico">
     <link rel="stylesheet" href="styles.css">
-    <script src="qt.js" defer></script>
+    <script src="qt35k.js" defer></script>
     <script src="script.js" defer></script>
   </head>
 
@@ -30,7 +31,7 @@
     </div>
     <br>
     <div>
-      <input type="range" id="epsilon" min="0" max="100">
+      <input type="range" id="epsilon" min="0" max="100" disabled>
       <label for="epsilon">Ɛ</label>
     </div>
     <div id="range-info"></div>
