--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>S</title>
     <link rel="icon" type="image/x-icon" href="snake.ico">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js"></script>
+    <script src="dqnAgent.js" defer></script>
     <script src="qt35k.js" defer></script>
     <script src="script.js" defer></script>
   </head>
@@ -23,6 +25,7 @@
 
       <button class="start-btn">HAMILTONIAN CYCLE ⚪</button>
       <button class="start-btn">Q LEARNING 💪</button>
+      <button class="start-btn">DQN 🧠</button>
       <button class="start-btn">SINGLE PLAYER 🎮</button>
       <div class="speed-controller">
         <button id="increase-speed" class="speed">Increase Speed</button>
